# adk-mcp

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  USAGE_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_server.py  start_server_with_gcp.bat  test_adk_integration.py  test_available_models.py  test_config.py  test_execute.py  test_gcp_auth.py  test_mock_services.py  test_real_google_adk.py  test_simple_vertex.py  test_streaming.py
.adk_sessions/: 45cfada1-5d06-43de-a4d8-05fe711536a0.json  a2123cea-d100-42ae-831c-cc6cca985143.json  da885999-29c6-4e98-9480-da480805cc26.json
.kiro/specs/voice-adk-mcp/: design.md  llms-long.txt  requirements.md  tasks.md
examples/: adk_websocket_client.py  basic_streaming.py  google_adk_demo.py  mock_services_demo.py  python_execution.py  run_server.py  test_server_endpoints.py  websocket_client.py
src/adk_mcp/: __init__.py  adk_voice_agent.py  conversation_context.py  executor.py  google_adk.py  live_api_integration.py  mock_services.py  server.py  streaming.py  ui_template.py  voice_code_executor.py  voice_security.py  voice_streaming.py
src/adk_mcp/mobile/: __init__.py  android_webview.py
static/: audio-processor.js  voice_client.html  voice_client.js  voice_first_ui.html
tests/: __init__.py  test_executor.py  test_google_adk.py  test_mock_services.py  test_streaming.py
