[project]
name = "adk-mcp"
version = "0.1.0"
description = "Agent Development Kit with Google ADK-Web integration and bidirectional streaming support"
authors = [{ name = "ADK Team" }]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-cloud-aiplatform>=1.38.0",
    "google-auth>=2.15.0",
    "google-auth-oauthlib>=0.8.0",
    "google-auth-httplib2>=0.1.0",
    "websockets>=10.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
]

[project.scripts]
adk = "adk_mcp.server:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
